--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">COM31007</string>
     <string name="title_home">New Trip</string>
-    <string name="title_dashboard">My Trips</string>
-    <string name="title_notifications">Photos</string>
+    <string name="title_history">History</string>
+    <string name="title_gallery">Gallery</string>
 </resources>
