--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_home">New Trip</string>
     <string name="title_history">History</string>
     <string name="title_gallery">Gallery</string>
+    <string name="title_about">About</string>
 </resources>
